# dbot

./: .gitignore  Dockerfile  LICENSE  Makefile  Pipfile  README.md  dbot.py  docker-compose.debug.yml  docker-compose.yml  freeze.sh  pyproject.toml  requirements.txt
cogs/: rolldice.py
docs/: index.md
src/: dbot.py
src/bggif/: collection.py  hot.py  search.py  user.py
src/cogs/: admin.py  bgg.py  fun.py  rolldice.py
src/cowsay/: main.py
src/utils/: __init__.py  basiceval.py  sec.py  utils.py
