[project]
name = ""
version = "0.0.1"
requires-python = ">=3.8"
dependencies = [
    "python-dotenv",
    "pyparsing",
    "xmltodict",
    "requests",
    "discord-pretty-help",
    "numexpr",
    "discord.py",
    "matplotlib",
]

[dependency-groups]
dev = []

[tool.uv]
package = false

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
